--- a/FitMap/app/build.gradle
+++ b/FitMap/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment:$nav_version"
     implementation "android.arch.navigation:navigation-ui:$nav_version"
     androidTestImplementation "android.arch.navigation:navigation-testing:$nav_version"
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
