--- a/VorigeVersies/FitMap/app/build.gradle
+++ b/VorigeVersies/FitMap/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation "android.arch.navigation:navigation-testing:$nav_version"
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
 }
 
